:lipstick: feat : 내 카밥 리스트, 카밥 예약 내역, 카밥 상세정보 보기 API 관련 ui 파일 수정
Related to: #157

--- a/AOS/app/src/main/res/layout/fragment_approve_reservation_dialog.xml
+++ b/AOS/app/src/main/res/layout/fragment_approve_reservation_dialog.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.mypage.charger.ApproveReservationDialogViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
