--- a/AOS/app/src/main/res/layout/fragment_my_charger.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_charger.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.mypage.charger.MyChargerViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,12 +35,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
+            android:text="@{viewModel.chargerName}"
             android:textColor="@color/gray_700"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/ib_back"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="붕붕이 카밥1" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_more"
