--- a/AOS/app/src/main/res/layout/fragment_my_charger_list.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_charger_list.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.mypage.charger.MyChargerListViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -64,10 +71,34 @@
             android:id="@+id/tv_current_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/current_filter"
+            android:text="@{viewModel.filterText}"
             app:layout_constraintBottom_toBottomOf="@id/ib_filter"
             app:layout_constraintEnd_toEndOf="@id/end_guide_line"
             app:layout_constraintTop_toTopOf="@id/ib_filter" />
+
+        <ImageView
+            android:id="@+id/iv_empty_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="180dp"
+            android:src="@drawable/register_charger_onboarding_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_current_filter" />
+
+        <TextView
+            android:id="@+id/tv_empty_point_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/empty_own_charger_list"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@id/iv_empty_state"
+            app:layout_constraintStart_toStartOf="@id/iv_empty_state"
+            app:layout_constraintTop_toBottomOf="@id/iv_empty_state" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_my_charger_list"
