--- a/AOS/app/src/main/res/layout/my_charger_reservation_item.xml
+++ b/AOS/app/src/main/res/layout/my_charger_reservation_item.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.mypage.charger.MyChargerReservationViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
