--- a/AOS/app/src/main/res/layout/fragment_register_detail.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_detail.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.mypage.register.RegisterViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -82,6 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:afterTextChanged="@{s -> viewModel.updateNickname(s)}"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="15dp"
                 android:textSize="14sp" />
@@ -273,7 +276,7 @@
                 android:text="@string/inside" />
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/canopy"
+                android:id="@+id/chip_canopy"
                 style="@style/Base.Theme.CarBap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -295,6 +298,7 @@
             android:background="@drawable/background_normal_radius_btn"
             android:paddingVertical="16dp"
             android:text="@string/next"
+            android:enabled="@{viewModel.isDetailCompleted()}"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
