:sparkles: Feat : 닉네임 텍스트 데이터 바인딩 적용 - 데이터 바인딩을 적용해 드로워에 닉네임이 반영되도록 구현
Related to: #153

--- a/AOS/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/AOS/app/src/main/res/layout/header_navigation_drawer.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.home.HomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
-            android:text="@string/softeer_nickname"
+            android:text='@{viewModel.nickname+`님`}'
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_account" />
