:sparkles: Feat : Logout 기능 구현 - logout을 위해 textview id 추가 - viewmodel의 logout 함수 추가
Related to: #153

--- a/AOS/app/src/main/res/layout/fragment_home.xml
+++ b/AOS/app/src/main/res/layout/fragment_home.xml
@@ -139,6 +139,7 @@
             app:menu="@menu/navigation_drawer">
 
             <TextView
+                android:id="@+id/tv_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
