--- a/AOS/app/src/main/res/navigation/my_charger_graph.xml
+++ b/AOS/app/src/main/res/navigation/my_charger_graph.xml
@@ -24,6 +24,10 @@
         <action
             android:id="@+id/action_myChargerReservationFragment_to_myChargerDetailFragment"
             app:destination="@id/myChargerDetailFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@anim/nav_default_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"
             app:popUpTo="@id/myChargerReservationFragment"
             app:popUpToInclusive="true" />
     </fragment>
