--- a/AOS/app/src/main/res/layout/fragment_my_charger_detail.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_charger_detail.xml
@@ -82,11 +82,11 @@
                     android:id="@+id/iv_qr_code_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:contentDescription="@string/qr_code_description"
                     android:src="@drawable/qr_code_image"
+                    app:layout_constraintBottom_toTopOf="@id/my_charger_detail_divider"
                     app:layout_constraintEnd_toEndOf="@id/end_guide_line"
-                    app:layout_constraintTop_toBottomOf="@id/iv_charger_default_image" />
+                    app:layout_constraintTop_toBottomOf="@id/my_charger_overall_divider" />
 
                 <TextView
                     android:id="@+id/tv_distance_from_my_location"
