:lipstick: Fix : fragment_my_point.xml.xml 수정 - 포인트 내역 화면 UI 수정
Related to: #181

--- a/AOS/app/src/main/res/layout/fragment_my_point.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_point.xml
@@ -90,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:textSize="20sp"
+            android:text="@{viewModel.myTotalPoint}"
             android:textColor="@android:color/black"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv_total_points"
@@ -103,6 +104,7 @@
             android:src="@drawable/register_charger_onboarding_img"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_total_points"
@@ -114,6 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/empty_point_charge"
+            android:visibility="invisible"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textAlignment="center"
